[tool.poetry]
name = "voice-cloner"
version = "0.1.0"
description = ""
authors = ["spark71 <noxdrummer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
jupyter = "^1.0.0"
librosa = "^0.10.2.post1"
huggingface-hub = "^0.23.4"
huggingface = "^0.0.1"
numpy = "1.26.4"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
